--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ body {
     padding-left: 20px;  /* Padding for some spacing from the edge */
     z-index: -1;  /* Ensure it stays behind the sign-in container */
     display: flex;
-    flex-direction:top;
+    flex-direction:column;
     justify-content:top;  /* Vertically center the content */
     text-align: left;  /* Align text to the left */
     color: rgb(0, 0, 0); /* Slight transparency */
