--- a/styles.css
+++ b/styles.css
@@ -151,8 +151,8 @@ body {
     z-index: -1;  /* Ensure it stays behind the sign-in container */
     display: flex;
     flex-direction:column;
-    justify-content:top;  /* Vertically center the content */
-    text-align:top;  /* Align text to the left */
+    justify-content:top;  /* Vertically top the content */
+    text-align:left;  /* Align text to the left */
     color: rgb(0, 0, 0); /* Slight transparency */
 }
 
@@ -182,7 +182,7 @@ body {
         font-size: 18px;  /* Adjust paragraph size for better fit */
     }
 }
-Key Chang
+Key Change
 
 /* Sign In Container */
 .container {
